--- a/nginx.conf
+++ b/nginx.conf
@@ -6,21 +6,28 @@ http {
 
     sendfile on;
 
-    upstream docker-front-admin {
-        server front-admin-prod:3000;
-    }
-
-    upstream docker-backend {
-        server gateway:9090;
-    }
-
     proxy_set_header   Host $host;
     proxy_set_header   X-Real-IP $remote_addr;
     proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header   X-Forwarded-Host $server_name;
 
+    ##
+    # SSL Settings
+    ##
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3; # Dropping SSLv3, ref: POODLE
+    ssl_prefer_server_ciphers on;
+    ssl_certificate                  /etc/nginx/certs/www.ipmosaico.com.pem;
+    ssl_certificate_key              /etc/nginx/certs/www.ipmosaico.com.key;
+
+    ##
+    # frontend
+    ##
+    upstream docker-front-admin {
+        server front-admin:3000;
+    }
     server {
         listen 3000;
+        listen 443 ssl;
 
         location / {
             proxy_pass         http://docker-front-admin;
@@ -28,6 +35,12 @@ http {
         }
     }
 
+    ##
+    # backend
+    ##
+    upstream docker-backend {
+        server gateway:9090;
+    }
     server {
         listen 9090;
 
@@ -36,5 +49,12 @@ http {
             proxy_redirect     off;
         }
     }
+
+    ##
+    # Logging Settings
+    ##
+
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
 
 }
