adding ssl support to backend requests

--- a/nginx.conf
+++ b/nginx.conf
@@ -23,7 +23,7 @@ http {
     # frontend
     ##
     upstream docker-front-admin {
-        server front-admin:3000;
+        server front-admin-prod:3000;
     }
     server {
         listen 3000;
@@ -42,7 +42,7 @@ http {
         server gateway:9090;
     }
     server {
-        listen 9090;
+        listen 9090 ssl;
 
         location / {
             proxy_pass         http://docker-backend;
