--- a/nginx.conf
+++ b/nginx.conf
@@ -16,14 +16,14 @@ http {
     ##
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3; # Dropping SSLv3, ref: POODLE
     ssl_prefer_server_ciphers on;
-    ssl_certificate                  /etc/nginx/certs/www.ipmosaico.com.pem;
-    ssl_certificate_key              /etc/nginx/certs/www.ipmosaico.com.key;
+    ssl_certificate                  /etc/nginx/www.ipmosaico.com.pem;
+    ssl_certificate_key              /etc/nginx/www.ipmosaico.com.key;
 
     ##
     # frontend
     ##
     upstream docker-front-admin {
-        server front-admin-prod:3000;
+        server front-admin:3000;
     }
     server {
         listen 3000;
