--- a/nginx.conf
+++ b/nginx.conf
@@ -34,6 +34,12 @@ http {
         }
     }
 
+    server {
+           listen 80;
+
+           return 301 https://$host$request_uri;
+    }
+
     ##
     # backend
     ##
